--- a/app.json
+++ b/app.json
@@ -36,6 +36,20 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "eadf7644-e7b3-4ab8-8055-9740e45a52c7"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/eadf7644-e7b3-4ab8-8055-9740e45a52c7"
     }
   }
 }
