--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/000.ico",
         "backgroundColor": "#ffffff"
       },
       "package": "com.leof7596.myapp"
@@ -21,14 +21,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/000.ico"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/000.ico",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
