--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "react-native-screens": "~4.16.0",
     "react-native-view-shot": "~4.0.3",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/dom-to-image": "^2.6.7",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.1.16",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
