--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -19,23 +19,24 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "dom-to-image": "^2.6.0",
-    "expo": "^54.0.10",
+    "expo": "54.0.13",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-media-library": "~18.2.0",
-    "expo-router": "~6.0.8",
+    "expo-router": "~6.0.12",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-updates": "~29.0.11",
-    "expo-web-browser": "~15.0.7",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "fs-extra": "^11.3.2",
+    "jest-expo": "~54.0.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -46,7 +47,8 @@
     "react-native-view-shot": "~4.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.6.0"
+    "react-native-worklets": "0.5.1",
+    "typescript": "~5.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -56,7 +58,6 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
-    "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
   "private": true
